--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Hind Siliguri', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navv{
+  background-color: rgba(255, 0, 0, 0.137);
+  border: solid 3px rgba(255, 255, 255, 0.116);
+  box-shadow: rgba(0, 0, 0, 0.082) 1px 1px 1px 1px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  margin-top: -0.5em;
+  margin-left: -0.5em;
+  margin-right: -0.5em;
+}
+ 
+body{
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238, 174, 202, 0.884) 0%, rgba(148,187,233,1) 100%);
+}
+
+.row {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
