--- a/src/components/Ciudad.module.css
+++ b/src/components/Ciudad.module.css
@@ -10,13 +10,29 @@
 }
 
 .Link{
-        text-decoration: none;
+        text-decoration: none !important;
         color: white;
         border: solid 1px white;
-        padding: 0.5em;
         border-radius: 0.5em;
-        margin: 0;
         background-color: rgba(0, 0, 0, 0.205);
+        width: 3em;
+        align-self: center;
+        justify-self: center;
+        margin: 0;
+        margin-top: 0.5em;
+        padding: 0.3em;
+}
+
+
+.likto{
+        text-decoration: none !important;
+        text-decoration-color: red;
+}
+
+.buttonDiv{
+        display: flex;
+        justify-content: center;
+        text-decoration:  none !important;
 }
 
 .Link:hover{
