--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@ a{
   text-decoration: none;
 }
 
+#buttonStart:hover {
+  cursor: pointer;
+}
+
+
+
 .navv{
   background-color: rgba(255, 0, 0, 0.137);
   border: solid 3px rgba(255, 255, 255, 0.116);
